# joplen_mlsp2024

./: .dvcignore  .gitattributes  .gitignore  .gitmodules  README.md  requirements.txt  ruff.toml  setup.sh  summary_stats.ipynb  switch_url.sh  test_model.ipynb  tree_test.ipynb
.dvc/: config
FASTEL/src/: engine.py  models_multitask.py  soft_trees_tests.py  utils_multitask.py
datasets/: .gitignore  nanoparticle.dvc
datasets/bouts-datasets/: .gitignore
datasets/crime/: processed.dvc  raw.dvc
datasets/general-descriptors-datasets/: README.md  chem_data.py  structure.yaml
datasets/nanoparticle/: processed.dvc  raw.dvc
datasets/pac_dimerization/: processed.dvc  raw.dvc
datasets/parkinsons/: processed.dvc  raw.dvc
experiments/: analyze_performance.ipynb  catboost_significance.ipynb  catboost_test.ipynb  check_memory_reqs.ipynb  compare_models.ipynb  dataset_analysis.ipynb  multitask_selection.ipynb  nn.py  paper_plotting.ipynb  parameters.dvc  plotting.ipynb  poster_plotting.ipynb  predict_both.ipynb  prediction.ipynb  process_mt_datasets.ipynb  process_pmlb.ipynb  process_st_datasets.ipynb  singletask_regclass.ipynb  singletask_selection.ipynb  singletask_sweep.ipynb  st_selection.ipynb  subspace.ipynb  test_ax.ipynb  test_nn.ipynb  test_pmlb.ipynb  try_new_loss.ipynb  try_paretto.ipynb
joplen/: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
ml_utils/: .gitignore  pyproject.toml  requirements.txt
ml_utils/src/ml_utils/: loss_classes.py  utils.py
ml_utils/tests/: test_comb_iterator.py  test_dataset_overlap.py
(+8682 files in other folders)
